[package]
name = "version"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99" }
cargo-manifest = "0.19.1"
clap = { version = "4.5.46", features = ["derive", "env"] }
colored = "3.0.0"
regex = "1"
semver = "1.0.26"

[lints.clippy]
pedantic = { level = "warn", priority = 0 }
